A11y fix #18872: It it impossible to change "Show names" palette property by keyboard.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -100,6 +100,8 @@ VALUE_OutputLevel_Maximum=Maximum
 #  if false, code using Forte's AbsoluteLayout is generated.
 PROP_SELECTED_PALETTE=Component Palette
 HINT_SELECTED_PALETTE=Choose from multiple designs of the Component Palette.
+PROP_SHOW_COMPONENT_NAMES=Component Palette Shows Names
+HINT_SHOW_COMPONENT_NAMES=If True, component palette shows names of components.
 VALUE_SELECTED_PALETTE_NONE=None
 PROP_OPEN_FORMS_IN_ONE_WINDOW=Open Forms in One Window
 HINT_OPEN_FORMS_IN_ONE_WINDOW=If True, opened forms are docked into one Form Designer window. If False, each form opens in its own window.
