IN=4781 L10N on module description

--- a/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
+++ b/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
@@ -9,6 +9,14 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
+# END_COPYRIGHT_NOTICE}
+
+# module description
+OpenIDE-Module-Name=JSP/Servlet Breakpoint Support
+OpenIDE-Module-Display-Category=Web
+OpenIDE-Module-Short-Description=Supports the debugging of JSP
+OpenIDE-Module-Long-Description=The JSP/Servlet Breakpoint Support is a module that allows to debug JSP and Servlets running on JSP engine.
+
 CTL_Debug_Name=Servlet/JSP Debugging
 CTL_PROP_Port=Port
 HINT_Port=Port on which the servlet and JSP engine is running
