Fix of bug #18668: JFrame and JDialog added to palette.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -745,6 +745,8 @@ Palette/Swing2/javax-swing-JDesktopPane.instance=JDesktopPane
 Palette/Swing2/javax-swing-JOptionPane.instance=JOptionPane
 Palette/Swing2/javax-swing-JColorChooser.instance=JColorChooser
 Palette/Swing2/javax-swing-JFileChooser.instance=JFileChooser
+Palette/Swing2/javax-swing-JFrame.instance=JFrame
+Palette/Swing2/javax-swing-JDialog.instance=JDialog
 
 Palette/AWT/java-awt-Label.instance=Label
 Palette/AWT/java-awt-Button.instance=Button
