Small a11y fixes: missing descriptions and mnemonics conflicts.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -110,6 +110,10 @@ HINT_FORMDESIGNER_BACKGROUND_COLOR=The color of the Form Designer window's backg
 PROP_FORMDESIGNER_BORDER_COLOR=Form Designer Border Color
 HINT_FORMDESIGNER_BORDER_COLOR=The color of the border around designed component.
 
+# HandleLayer
+ACSN_HandleLayer=Visual form designer
+ACSD_HandleLayer=Use Component Inspector for keyboard-only navigation
+
 # generic OK button label used in Form Module
 CTL_OK=OK
 ACSD_CTL_OK=N/A
@@ -457,7 +461,7 @@ FMT_MSG_RESIZING_FORMDESIGNER=Resizing FormDesigner to size {0}, {1}.
   CTL_CW_Value_Mnemonic=V
   ACSD_CTL_CW_Value=N/A
   CTL_CW_Bean=Bean:
-  CTL_CW_Bean_Mnemonic=B
+  CTL_CW_Bean_Mnemonic=n
   ACSD_CTL_CW_Bean=N/A
   CTL_CW_Property=Property:
   CTL_CW_Property_Mnemonic=P
@@ -598,7 +602,7 @@ CTL_EE_ALREADY_EXIST=Event handler of this name is already included.
 CTL_EE_ADD_CAPTION=Add Handler
 CTL_EE_ADD_LABEL=New Handler Name:
 CTL_EE_Handlers=Handlers
-CTL_EE_Handlers_Mnemonic=H
+CTL_EE_Handlers_Mnemonic=d
 ACSD_CTL_EE_Handlers=N/A
 ACSD_CTL_EE_ADD=N/A
 ACSD_CTL_EE_REMOVE=N/A
@@ -666,7 +670,7 @@ ACSD_BTN_SelectMode=N/A
 ACSD_FormCustomEditor=Description of selected mode: {0}
 
 CTL_GeneratePostInitializationCode=Generate Post-initialization Code
-CTL_GeneratePostInitializationCode_Mnemonic=o
+CTL_GeneratePostInitializationCode_Mnemonic=s
 CTL_GeneratePreInitializationCode=Generate Pre-initialization Code
 CTL_GeneratePreInitializationCode_Mnemonic=r
 ACSD_CTL_GeneratePostInitializationCode=N/A
