Corrected capitalization errors.

--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -51,7 +51,7 @@ CTL_Thread_stopped_no_source=Thread {0} stopped at {1}.{2} line {3} - unavailabl
 CTL_Debugger_paused=Debugger paused
 CTL_Debugger_starting=Debugger starting
 CTL_Debugger_running=Debugger running
-CTL_Debugger_version=Default debugger (JPDA)
+CTL_Debugger_version=Default Debugger (JPDA)
 CTL_Connecting_to_shmem_noargs=Connecting through shared memory
 CTL_Connecting_to_shmem=Connecting through shared memory block {0}
 CTL_Connecting_to_socket_noargs=Connecting through network
@@ -111,13 +111,13 @@ CTL_Exception_event_name_type_name=Exception
 CTL_Exception_event_name_catched=Exception {0} caught
 CTL_Exception_event_name_uncatched=Exception {0} uncaught
 CTL_Exception_event_name=Exception {0}
-PROP_Exception_class_name=Exception class name
+PROP_Exception_class_name=Exception Class Name
 HINT_Exception_class_name=Name of class (or superclass) of exception
 #If local variables are not available.
 CTL_Source_compiled_without_g=source compiled without -g option
 #MethodBreakpoint
 HINT_breakpoint_apply_to_anonymous_inner=Apply the breakpoint also to anonymous inner classes of the specified class?
-PROP_breakpoint_apply_to_anonymous_inner=Anonymous inner classes
+PROP_breakpoint_apply_to_anonymous_inner=Anonymous Inner Classes
 
 #...BreakpointPanel
 CTL_Package_name=Package Name:
@@ -129,17 +129,17 @@ ACSD_CTL_Class_name=
 
 #Debugging via 'Start', unable to resolve hostname (network broken).
 EXC_Cannot_establish_connection_to_VM=Cannot establish connection to the VM.
-PROP_Exception_type_name=Stop on
+PROP_Exception_type_name=Stop On
 HINT_Exception_type_name=The type of action the breakpoint is set on.
-CTL_Exception_type_catched=Exception caught
-CTL_Exception_type_uncatched=Exception uncaught
-CTL_Exception_type_both=Exception caught or uncaught
+CTL_Exception_type_catched=Exception Caught
+CTL_Exception_type_uncatched=Exception Uncaught
+CTL_Exception_type_both=Exception Caught or Uncaught
 
 #ExceptionBreakpointPanel
 CTL_Exception_class_name=Exception Class Name:
 CTL_Exception_class_name_mnemonic=E
-CTL_Exception_class_name_description=(Enter full name of class of Exception or Error, e.g.: java.lang.InternalError)
-CTL_Exception_stop_on=Stop on:
+CTL_Exception_class_name_description=(Enter full name of class of exception or error, e.g.: java.lang.InternalError)
+CTL_Exception_stop_on=Stop On:
 CTL_Exception_stop_on_mnemonic=o
 CTL_Exception_catch=Exception Caught
 CTL_Exception_uncatch=Exception Uncaught
@@ -158,10 +158,10 @@ PROP_breakpoint_class_name=Class Name
 HINT_breakpoint_class_name=Name of the class containing this breakpoint.
 PROP_breakpoint_field_name=Field Name
 HINT_breakpoint_field_name=Name of the field containing this breakpoint.
-PROP_breakpoint_type_name=Stop on
+PROP_breakpoint_type_name=Stop On
 HINT_breakpoint_type_name=The type of action this breakpoint is set on.
-CTL_Breakpoint_type_access_value=Variable access
-CTL_Breakpoint_type_modification_value=Variable modification
+CTL_Breakpoint_type_access_value=Variable Access
+CTL_Breakpoint_type_modification_value=Variable Modification
 
 CTL_Break_on_field_modification_not_supported=Warning: Breakpoint on variable modification is not supported by the current VM.
 CTL_Break_on_field_access_not_supported=Warning: Breakpoint on variable access is not supported by the current VM.
@@ -174,7 +174,7 @@ CTL_Variable_class_name=Class Name:
 CTL_Variable_class_name_mnemonic=N
 CTL_Variable_field_name=Field Name:
 CTL_Variable_field_name_mnemonic=F
-CTL_Variable_stop_on=Stop on:
+CTL_Variable_stop_on=Stop On:
 CTL_Variable_stop_on_mnemonic=O
 ACSD_CTL_Variable_class_name=
 ACSD_CTL_Variable_field_name=
@@ -186,7 +186,7 @@ PROP_breakpoint_class_name=Class Name
 HINT_breakpoint_class_name=Name of the class containing this breakpoint.
 PROP_breakpoint_method_name=Method Name
 HINT_breakpoint_method_name=Name of the method this breakpoint is set on, if applicable.
-PROP_breakpoint_all_methods=All methods
+PROP_breakpoint_all_methods=All Methods
 # [PENDING] ??? please add comments to bundle file
 # hint for "all methods" property - property of breakpoint on method.
 # if this property is true, breakpoints are active on all methods in this class (classes).
@@ -207,11 +207,11 @@ ACSD_CTL_Anonymous_classes=
 ACSD_MethodBreakpointPanel=
 
 #ThreadBreakpoint
-PROP_breakpoint_type=Set on
+PROP_breakpoint_type=Set On
 HINT_breakpoint_type=The type of action this breakpoint is set on.
-CTL_Property_type_start_name=Thread start
-CTL_Property_type_death_name=Thread death
-CTL_Property_type_both_name=Thread start or death
+CTL_Property_type_start_name=Thread Start
+CTL_Property_type_death_name=Thread Death
+CTL_Property_type_both_name=Thread Start or Death
 CTL_Thread_event_type_name=Thread
 CTL_Thread_start_event_name=Thread start
 CTL_Thread_death_event_name=Thread death
@@ -224,22 +224,22 @@ CTL_Death=death
 CTL_Thread_start=Thread Start
 CTL_Thread_death=Thread Death
 CTL_Thread_both=Thread Start or Death
-CTL_Thread_Set_breakpoint_on=Set Breakpoint on:
+CTL_Thread_Set_breakpoint_on=Set Breakpoint On:
 CTL_Thread_Set_breakpoint_on_mnemonic=O
 ACSD_CTL_Thread_Set_breakpoint_on=
 ACSD_ThreadBreakpointPanel=
 
 #ClassBreakpoint
-PROP_class_filter=Class filter
+PROP_class_filter=Class Filter
 HINT_class_filter=Class filter
-PROP_class_exclusion_filter=Exclusion filter
+PROP_class_exclusion_filter=Exclusion Filter
 # [PENDING] not very useful hint...
 HINT_class_exclusion_filter=Select whether this class filter is exclusive.
-PROP_class_type=Set breakpoint on
+PROP_class_type=Set Breakpoint On
 HINT_class_type=The type of action the breakpoint is set on.
-CTL_Breakpoint_type_class_prepare=Class prepare
-CTL_Breakpoint_type_class_unload=Class unload
-CTL_Breakpoint_type_class_both=Class prepare or unload
+CTL_Breakpoint_type_class_prepare=Class Prepare
+CTL_Breakpoint_type_class_unload=Class Unload
+CTL_Breakpoint_type_class_both=Class Prepare or Unload
 CTL_Class_event_type_name=Class
 CTL_Class_prepare_event_name=Class {0} prepare
 CTL_Class_unload_event_name=Class {0} unload
@@ -252,7 +252,7 @@ CTL_Unload=unload
 CTL_Class_filter=Class Filter (Set exclusion / non-exclusion filter for classes)
 CTL_Class_exclusion_filter=\ Exclusion Filter
 CTL_Class_exclusion_filter_mnemonic=x
-CTL_Class_breakpoint_type=Breakpoint set on: 
+CTL_Class_breakpoint_type=Breakpoint Set On: 
 CTL_Class_breakpoint_type_mnemonic=r
 CTL_Class_filter_hint=(Set exclusion / non-exclusion filter for classes)
 CTL_Class_prepare=Class Prepare
