Add Index dialog a11y bug fixed.

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -506,6 +506,8 @@ AddIndexName = Index name:
 AddIndexName_Mnemonic = I
 AddIndexLabel = Select the items you want to add to the index:
 
+ACS_AddIndexDialogA11yName=Add Index Dialog
+ACS_AddIndexDialogA11yDesc=Add index dialog.
 ACS_AddIndexNameA11yDesc = Name of the index.
 ACS_AddIndexNameTextFieldA11yName = Index name text field
 ACS_AddIndexNameTextFieldA11yDesc = Name of the index.
