#19180: Cleanup option handling in ExitDialog (merged from release33).

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -456,13 +456,12 @@ ACC_InfiniteProgressDesc=Shows some tasks are in progress.
 
 CTL_ActionInProgress=action in progress
 CTL_ExitTitle=Save
-CTL_Save=Save
-CTL_Save_Mnemonic=S
-CTL_SaveAll=Save All
-CTL_SaveAll_Mnemonic=A
-CTL_DiscardAll=Discard All
-CTL_DiscardAll_Mnemonic=D
-CTL_Cancel=Cancel
+# Note that the '&' goes just before the mnemonic character
+CTL_Save=&Save
+# Note that the '&' goes just before the mnemonic character
+CTL_SaveAll=Save &All
+# Note that the '&' goes just before the mnemonic character
+CTL_DiscardAll=&Discard All
 EXC_Save=An exception occurred while saving
 CTL_PendingTitle=Waiting for Tasks to Finish
 ACSD_PendingTitle=N/A
@@ -487,10 +486,6 @@ ACSD_NotifyExceptionPanel=N/A
 
 ACSN_ListOfChangedFiles=List
 ACSD_ListOfChangedFiles=List of changed files for save
-ACSD_SaveButton=N/A
-ACSD_SaveAllButton=N/A
-ACSD_DiscardAllButton=N/A
-ACSD_CancelButton=Cancel button for save changed files
 ACSD_ExitDialog=Dialog for save any changes
 
 LAB_EndTasks=End Tasks
