19045: "Find Source" option on debugging into code without source either unclear or misbehaves

--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -104,7 +104,7 @@ LAB_JPDADebuggerType=JPDA Debugging
 CTL_JPDADebuggerTypeName=JPDA Debugging
 
 #JPDADebuggerModule
-CTL_Action_on_TI_find=Find source
+CTL_Action_on_TI_find=Stop at the first line with source
 
 #ExceptionBreakpoint
 CTL_Exception_event_name_type_name=Exception
