Bugfix of #19450 Changed UI for tooltips for non-Java files

--- a/properties/src/org/netbeans/modules/properties/Bundle.properties
+++ b/properties/src/org/netbeans/modules/properties/Bundle.properties
@@ -166,15 +166,9 @@ MSG_LangExists=Language {0} already exists in this bundle.
 LBL_EditorName_Modified={0} *
 # {0} name of the file
 LBL_EditorName_Uptodate={0}
-# {0} file with package
-# {1} file without package
-# {2} extension
-LBL_EditorToolTip_Invalid={0} [{2}] (invalid)
-# {0} file with package
-# {1} file without package
-# {2} extension
-# {3} filesystem display name
-LBL_EditorToolTip_Valid={0} [{2}] in {3}
+# {0} file with path and extension
+# {1} filesystem display name
+LAB_EditorToolTip={0} in {1}
 # {0} = name of the data object
 # {1} = file name with package
 LBL_ObjectOpen=Opening {0} ...
