--- a/xml/build.xml
+++ b/xml/build.xml
@@ -27,17 +27,11 @@ Microsystems, Inc. All Rights Reserved.
     <property name="build.compiler.debug" value="on"/>
 
 
-    <target name="init">
-        <tstamp/>
-        <property name="buildnumber" value="${DSTAMP}${TSTAMP}"/>
-        <echo message="buildnumber = ${buildnumber}"/>
-    </target>
-
     <target name="compile">
         <for-each locations="${submodules}"/>
     </target>
 
-    <target name="jars" depends="init,compile">
+    <target name="jars" depends="compile">
         <for-each locations="${submodules}"/>
     </target>
 
