Each module has its own property for specification version.

--- a/xml.core/build.xml
+++ b/xml.core/build.xml
@@ -46,7 +46,8 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="buildnumber = ${buildnumber}"/>
 
         <property file="${xml_root}/spec-vers.properties"/>
-        <filter token="SPEC_VERS_SUBST" value="${xml.specification.version}"/>
+        <filter token="CORE_SPEC_VERS_SUBST" value="${xml.core.specification.version}"/>
+        <filter  token="TAX_SPEC_VERS_SUBST" value="${xml.tax.specification.version}"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     </target>
 
