--- a/xml.catalog/build.xml
+++ b/xml.catalog/build.xml
@@ -43,7 +43,8 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="buildnumber = ${buildnumber}"/>
 
         <property file="${xml_root}/spec-vers.properties"/>
-        <filter token="SPEC_VERS_SUBST" value="${xml.specification.version}"/>
+        <filter token="CATALOG_SPEC_VERS_SUBST" value="${xml.catalog.specification.version}"/>
+        <filter    token="CORE_SPEC_VERS_SUBST" value="${xml.core.specification.version}"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     </target>
 
