--- a/xml.tax/build.xml
+++ b/xml.tax/build.xml
@@ -44,7 +44,7 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="buildnumber = ${buildnumber}"/>
 
         <property file="${xml_root}/spec-vers.properties"/>
-        <filter token="SPEC_VERS_SUBST" value="${xml.specification.version}"/>
+        <filter token="TAX_SPEC_VERS_SUBST" value="${xml.tax.specification.version}"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     </target>
 
