--- a/xml.text/build.xml
+++ b/xml.text/build.xml
@@ -45,7 +45,8 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="buildnumber = ${buildnumber}"/>
 
         <property file="${xml_root}/spec-vers.properties"/>
-        <filter token="SPEC_VERS_SUBST" value="${xml.specification.version}"/>
+        <filter token="TEXT_SPEC_VERS_SUBST" value="${xml.text-edit.specification.version}"/>
+        <filter token="CORE_SPEC_VERS_SUBST" value="${xml.core.specification.version}"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     </target>
 
