--- a/xml.core/build.xml
+++ b/xml.core/build.xml
@@ -104,6 +104,7 @@ Microsystems, Inc. All Rights Reserved.
 
         <mkdir dir="netbeans/modules/docs"/>
         <locjar jarfile="netbeans/modules/docs/xml-core.jar"
+                manifest="manifest-docs.mf"
                 compress="true">
             <fileset dir="javahelp" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
             <locale name="ja"/>
